implemented auth handlers, routes, and templates

--- a/templates/home.jinja
+++ b/templates/home.jinja
@@ -2,6 +2,9 @@
 
 {% block content %}
 
-<p> Hello Cordelia</p>
-
+{% if username %}
+  <p> Hello {{ username }}</p>
+{% else %}
+  <p>Welcome, stranger.</p>
+{% endif %}
 {% endblock %}
