--- a/templates/register.jinja
+++ b/templates/register.jinja
@@ -5,8 +5,8 @@
   <fieldset>
   <legend>register.</legend>
   <div class="name-form">
-    <label for="name">name: </label>:
-    <input type="text" name="name" id="name" required />
+    <label for="username">name: </label>
+    <input type="text" name="username" id="username" required />
   </div>
   <div class="email-form">
     <label for="email">email: </label>
