--- a/templates/login.jinja
+++ b/templates/login.jinja
@@ -5,12 +5,8 @@
   <fieldset>
   <legend>log in</legend>
   <div class="name-form">
-    <label for="name">name: </label>
-    <input type="text" name="name" id="name" required />
-  </div>
-  <div class="email-form">
-    <label for="email">email: </label>
-    <input type="text" name="email" id="email" required />
+    <label for="username">name: </label>
+    <input type="text" name="username" id="username" required />
   </div>
   <div class="password">
     <label for="password">password: </label>
