--- a/templates/base.jinja
+++ b/templates/base.jinja
@@ -11,6 +11,7 @@
             <li><a href="/register">Register</a></li>
             <li><a href="/art">Random 1</a></li>
             <li><a href="/fractal_art">Random 2</a></li>
+            <li><a href="/logout">Logout</a></li>
         </ul>
       </nav>
     </header>
